# scilab

./: .gitattributes  .gitignore  README  README.md  Scilab_Yasp.sln
scilab/: .clang-format  .cvsignore  .gitignore  .pvmd.conf  ACKNOWLEDGEMENTS  Association Fichiers Scilab.reg  CHANGES  CHANGES.md  CHANGES_2.X  CHANGES_3.X  CHANGES_4.X  CHANGES_5.0.X  CHANGES_5.1  CHANGES_5.1.X  CHANGES_5.2  CHANGES_5.2.X  CHANGES_5.3.X  CHANGES_5.4.X  CHANGES_5.5.X  CHANGES_5.6.X  CHANGES_5.6.x  CHANGES_6.0.0  CHANGES_6.0.X  CHANGES_JGRAPHX  CHANGES_SAS  CHANGES_SimulinkImport  COPYING  COPYING-BSD  Make.bat  Makefile  Makefile.OBJ.in  Makefile.am  Makefile.amk  Makefile.call_scilab.am  Makefile.dist  Makefile.in  Makefile.incl  Makefile.incl.am  Makefile.incl.amk  Makefile.incl.in  (+58 more)
scilab/Doc/: Changes.tex  Lexique.tex  Namespace.tex  Scilab.tex  Syntax.tex
scilab/Perl/: .cvsignore
scilab/VS-2005-settings/: CreateLibScilabdef.rules  f2c.rules  fortran-on-Win32.vssettings  fortran-on-Win64.vssettings  rename-vc-files.rules  renameheaders.rules  swig.rules
scilab/Visual-Studio-settings/: .gitignore  f2c.props  f2c.rules  f2c.targets  f2c.xml  fortran-on-Win64.vssettings  giws.rules  rename-vc-files.props  rename-vc-files.rules  rename-vc-files.targets  rename-vc-files.xml  swig.rules  tovsexpress.sce  vcproj.dtd  vfproj.dtd
scilab/Win-util/: Makefile
scilab/X11_defaults/: .cvsignore  MetanetBegin.help  MetanetModify.help  MetanetStudy.help  README  metanet.xbm  metanet.xpm  scilab.xbm  scilab.xpm
scilab/checkstyle/: scilab_checkstyle_convention.xml
scilab/config/: .cvsignore  Makecygdll.incl  Makedll.incl  Makefile.aix  Makefile.aix.in  Makefile.alpha  Makefile.amk  Makefile.darwin  Makefile.gcwin32  Makefile.hpux  Makefile.hpux11  Makefile.hpux9  Makefile.linux  Makefile.mak  Makefile.netbsd  Makefile.sgi  Makefile.solaris  Makefile.sunos  Makefile.ultrix  Makefile.ultrix.in  Makemex.incl.in  Makeso.incl  Makeso.incl.in  Makeso.incl.linux  README  config.guess  configuration.in  findpath  install-sh  ltmain.sh
scilab/contrib/: Makefile.am  Makefile.in  README  loader.sce  toolbox_skeleton.iss
scilab/demos/: Makefile  Thermique_bloc.cosf  alldems.dem
scilab/desktop/: Makefile.am  Makefile.in  puffin_256.xpm  puffin_32.xpm  puffin_48.xpm  scilab-adv-cli.desktop  scilab-cli.desktop  scilab.appdata.xml  scilab.desktop  scilab.xml  scilab.xpm  scinotes.desktop  xcos.desktop
scilab/etc/: .gitignore  Info.plist  Info.plist.in  classpath.xml  classpath.xml.in  classpath.xml.vc  jvm_options.xml  jvm_options.xml.in  jvm_options.xml.vc  librarypath.xml  logging.properties  logging.properties.in  logging.properties.vc  modules.xml  modules.xml.in  modules.xml.vc  scilab.quit  scilab.start  toolboxes.xml  yasp_modules.xml
scilab/examples/: Makefile  Makefile.in  Makefile.mak  Makesubdirs.bat  README
scilab/icons/: README  puffin.icns  puffin_128.xpm  scilab.icns
scilab/imp/: Makefile  Makefile.amk  Makefile.in  Makefile.mak  NperiPos.ps  SEpsf.c  Slatdocs.c  Slatexpr.c  Slatexpr2.c  Slatexprs.c  Slpr.c  env.c  util.c
scilab/intersci/: Makefile  Makefile.amk  Makefile.mak  check.c  check.h  crerhs.c  declare.c  getrhs.c  getrhs.h  intersci-n.c  intersci-n.h  intersci.c  intersci.h  opt.c  out.c  outext.c  read.c  variables.c
scilab/lcc/: .cvsignore  Readme_LCC.txt  lcc.reg
scilab/libs/: .cvsignore  .ghost  .gitignore  AAbase.def  ExplicitExportsLibScilab.vcdef  Libscilabdef.bat  Makefile  Makefile.am  Makefile.in  Makefile.mak  cleanvcdef.bat  libg2c.def  libs.iss
scilab/locale/: .gitignore
scilab/m4/: backtrace.m4  breakpad.m4  check_compiler.m4  compiler.m4  curl.m4  docbook.m4  doxygen.m4  eigen.m4  fftw.m4  fortran.m4  giws.m4  hdf5.m4  intel_compiler.m4  java-thirdparty.m4  java.m4  largefile.m4  libarchive.m4  libhdf5.m4  libs_by_debian.m4  libsmath.m4  libtool.m4  libxml2.m4  llvm.m4  ltoptions.m4  ltversion.m4  macosx.m4  matio.m4  mpi.m4  ocaml.m4  pcre.m4  pkg.m4  pvm.m4  sciman.m4  swig.m4  symlinks.m4  tcltk.m4  umfpack.m4  vmkit.m4
scilab/macros/: .cvsignore  BuildMacros.bat  BuildMacros.mak  BuildMacros.sln  BuildMacros.vcproj  Buildmacros.mak  CleanMacros.bat  Forwin.c  Gensosce.c  Lib.c  Make.lib  Make.lib.amk  Make.lib.mak  Makefile  Makefile.amk  Makefile.mak  Makesubdirs.bat  Name.c  buildmacros.sce
scilab/maple/: Makefile  README  examples.dia.ref  examples.mpl  examples.tst  macroC.mpl  macrofort.mpl  maple2scilab.mpl  maple2scilab.mpl.g
scilab/modules/: Makefile.am  Makefile.in  modules
scilab/node/: debug-windows.bat  linux-launcher.sh  loader.sce  node.iss  opticlim-windows.bat  scilab_process.js  scilab_server.js  start.sce  windows-launcher.bat
scilab/ocaml/: .cvsignore  .depend  Makefile  Modelicac.vcproj  README.txt  ReadMe-Windows.txt  bipartiteGraph.mli  causalityGraph.mli  compilation.ml  compilation.mli  hungarianMethod.ml  hungarianMethod.mli  instantiation.ml  instantiation.mli  lexer.mll  makefile.mak  optimization.ml  optimization.mli  optimizingCompiler.ml  optimizingCompiler.mli  parseTree.ml  parseTree.mli  parser.mly  precompilation.ml  precompilation.mli  scicosCodeGeneration.ml  scicosCodeGeneration.mli  scicosOptimizingCompiler.ml  squareSparseMatrix.mli  symbolicExpression.ml  symbolicExpression.mli  xMLCodeGeneration.ml  xMLCodeGeneration.mli
scilab/ootest/: run_test.sh  test_accessors.sci  test_accessors.sci.ref  test_bound_method.sci  test_bound_method.sci.err  test_bound_method.sci.ref  test_class_accessors.sci  test_class_accessors.sci.out  test_class_slot.sci  test_class_slot.sci.out  test_class_slot.sci.ref  test_constructor.sci  test_constructor.sci.ref  test_copy.sci  test_copy.sci.ref  test_get.sci  test_get.sci.ref  test_install_instance_property.sci  test_install_instance_property.sci.ref  test_install_property.sci  test_install_property.sci.ref  test_instance_slots_get.sci  test_instance_slots_get.sci.ref  test_instance_slots_get_recursive.sci  test_instance_slots_get_recursive.sci.ref  test_magic.sci  test_magic.sci.ref  test_matprop.sci  test_matprop.sci.out  test_matprop.sci.ref  test_private.sci  (+18 more)
(+83459 files in other folders)
